crates/gossamer-diagnostics/tests/snapshots/GL0002.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GL0002]: A `use` declaration whose imported name is never referenced. — here
--- framed ---
error[GL0002]: A `use` declaration whose imported name is never referenced.
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
