crates/gossamer-diagnostics/tests/snapshots/GL0003.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GL0003]: A binding marked `mut` that is never reassigned. Drop the `mut` - here
--- framed ---
error[GL0003]: A binding marked `mut` that is never reassigned. Drop the `mut`
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
