crates/gossamer-diagnostics/tests/snapshots/GL0006.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GL0006]: `x == true` reads worse than `x`, and `x == false` reads worse - here
--- framed ---
error[GL0006]: `x == true` reads worse than `x`, and `x == false` reads worse
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
