crates/gossamer-diagnostics/tests/snapshots/GL0008.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GL0008]: A `let` binding in the same block shadows an earlier one. Rename - here
--- framed ---
error[GL0008]: A `let` binding in the same block shadows an earlier one. Rename
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
