crates/gossamer-diagnostics/tests/snapshots/GL0009.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GL0009]: `let _ = expr?` silently discards an error. Either handle the — here
--- framed ---
error[GL0009]: `let _ = expr?` silently discards an error. Either handle the
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
