crates/gossamer-diagnostics/tests/snapshots/GL0011.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GL0011]: `panic!` inside `main` aborts without a clean exit code. Return a - here
--- framed ---
error[GL0011]: `panic!` inside `main` aborts without a clean exit code. Return a
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
