crates/gossamer-diagnostics/tests/snapshots/GL0012.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GL0012]: Calling `.clone()` on a literal or already-copied value is - here
--- framed ---
error[GL0012]: Calling `.clone()` on a literal or already-copied value is
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
